:sparkles: mdx pages and update deps

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.0.20",
+    "@mdx-js/react": "^1.0.20",
+    "@mdx-js/tag": "^0.20.3",
     "gatsby": "^2.0.111",
+    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-offline": "^2.0.22",
     "gatsby-plugin-react-helmet": "^3.0.6",
