--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-offline": "^2.0.22",
     "gatsby-plugin-react-helmet": "^3.0.6",
+    "gatsby-plugin-sitemap": "^2.1.0",
     "gatsby-plugin-typography": "^2.2.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
