--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sitemap": "^2.2.1",
     "gatsby-plugin-typography": "^2.3.0",
+    "gatsby-source-filesystem": "^2.1.1",
+    "lodash.kebabcase": "^4.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
