--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "gatsby-plugin-netlify": "^2.1.0",
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-plugin-sitemap": "^2.2.1",
     "gatsby-plugin-typography": "^2.3.0",
+    "gatsby-remark-images": "^3.1.2",
     "gatsby-source-filesystem": "^2.1.1",
     "lodash.kebabcase": "^4.1.1",
     "react": "^16.8.6",
