--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-sitemap": "^2.2.1",
     "gatsby-plugin-typography": "^2.3.0",
     "gatsby-remark-images": "^3.1.2",
+    "gatsby-remark-prismjs": "^3.3.0",
     "gatsby-remark-smartypants": "^2.1.0",
     "gatsby-source-filesystem": "^2.1.1",
     "lodash.kebabcase": "^4.1.1",
