--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-source-filesystem": "^2.1.1",
     "lodash.kebabcase": "^4.1.1",
     "prism-theme-night-owl": "^1.2.0",
+    "prismjs": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
