--- a/package.json
+++ b/package.json
@@ -28,15 +28,13 @@
     "gatsby-remark-prismjs": "^3.3.0",
     "gatsby-remark-smartypants": "^2.1.0",
     "gatsby-source-filesystem": "^2.1.1",
-    "lodash.kebabcase": "^4.1.1",
     "prism-theme-night-owl": "^1.2.0",
     "prismjs": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
-    "typography": "^0.16.19",
-    "typography-theme-de-young": "^0.16.19"
+    "typography": "^0.16.19"
   },
   "repository": {
     "type": "git",
