--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "typeface-fira-sans": "^0.0.54",
     "typography": "^0.16.19"
   },
   "repository": {
