--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-manifest": "^2.2.0",
     "gatsby-plugin-netlify": "^2.1.0",
+    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^2.2.1",
