--- a/package.json
+++ b/package.json
@@ -1,62 +1,69 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.0",
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "start": "npm run develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
-    "format:md": "prettier --write content/**/*.{md,mdx}",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
-  },
-  "dependencies": {
-    "@mdx-js/mdx": "^1.0.21",
-    "@mdx-js/react": "^1.0.21",
-    "@mdx-js/tag": "^0.20.3",
-    "gatsby": "^2.11.6",
-    "gatsby-mdx": "^0.6.3",
-    "gatsby-plugin-manifest": "^2.2.0",
-    "gatsby-plugin-netlify": "^2.1.0",
-    "gatsby-plugin-netlify-cache": "^1.2.0",
-    "gatsby-plugin-offline": "^2.2.0",
-    "gatsby-plugin-react-helmet": "^3.1.0",
-    "gatsby-plugin-sharp": "^2.2.1",
-    "gatsby-plugin-sitemap": "^2.2.1",
-    "gatsby-plugin-typography": "^2.3.0",
-    "gatsby-remark-images": "^3.1.2",
-    "gatsby-remark-prismjs": "^3.3.0",
-    "gatsby-remark-smartypants": "^2.1.0",
-    "gatsby-source-filesystem": "^2.1.1",
-    "prism-theme-night-owl": "^1.2.0",
-    "prismjs": "^1.16.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "typeface-fira-sans": "^0.0.54",
-    "typography": "^0.16.19"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
-  "devDependencies": {
-    "prettier": "1.18.2"
-  },
-  "prettier": {
-    "endOfLine": "lf",
-    "semi": false,
-    "singleQuote": false,
-    "jsxSingleQuote": false,
-    "useTabs": true,
-    "bracketSpacing": true,
-    "trailingComma": "es5"
-  }
+	"name": "gatsby-starter-hello-world",
+	"private": true,
+	"description": "A simplified bare-bones starter for Gatsby",
+	"version": "0.1.0",
+	"license": "MIT",
+	"scripts": {
+		"build": "gatsby build",
+		"develop": "gatsby develop",
+		"start": "npm run develop",
+		"format": "prettier --write src/**/*.{js,jsx}",
+		"format:md": "prettier --write content/**/*.{md,mdx}",
+		"serve": "gatsby serve",
+		"test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+	},
+	"dependencies": {
+		"@mdx-js/mdx": "^1.0.21",
+		"@mdx-js/react": "^1.0.21",
+		"@mdx-js/tag": "^0.20.3",
+		"gatsby": "^2.11.6",
+		"gatsby-mdx": "^0.6.3",
+		"gatsby-plugin-manifest": "^2.2.0",
+		"gatsby-plugin-netlify": "^2.1.0",
+		"gatsby-plugin-netlify-cache": "^1.2.0",
+		"gatsby-plugin-offline": "^2.2.0",
+		"gatsby-plugin-react-helmet": "^3.1.0",
+		"gatsby-plugin-sharp": "^2.2.1",
+		"gatsby-plugin-sitemap": "^2.2.1",
+		"gatsby-plugin-typography": "^2.3.0",
+		"gatsby-remark-images": "^3.1.2",
+		"gatsby-remark-prismjs": "^3.3.0",
+		"gatsby-remark-smartypants": "^2.1.0",
+		"gatsby-source-filesystem": "^2.1.1",
+		"prism-theme-night-owl": "^1.2.0",
+		"prismjs": "^1.16.0",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
+		"react-helmet": "^5.2.1",
+		"react-typography": "^0.16.19",
+		"typeface-fira-sans": "^0.0.54",
+		"typography": "^0.16.19"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+	},
+	"bugs": {
+		"url": "https://github.com/gatsbyjs/gatsby/issues"
+	},
+	"devDependencies": {
+		"husky": "^3.0.0",
+		"prettier": "1.18.2",
+		"pretty-quick": "^1.11.1"
+	},
+	"prettier": {
+		"endOfLine": "lf",
+		"semi": false,
+		"singleQuote": false,
+		"jsxSingleQuote": false,
+		"useTabs": true,
+		"bracketSpacing": true,
+		"trailingComma": "es5"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "pretty-quick --staged"
+		}
+	}
 }
