--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@mdx-js/tag": "^0.20.3",
 		"gatsby": "^2.11.6",
 		"gatsby-mdx": "^0.6.3",
+		"gatsby-plugin-google-analytics": "^2.1.1",
 		"gatsby-plugin-manifest": "^2.2.0",
 		"gatsby-plugin-netlify": "^2.1.0",
 		"gatsby-plugin-netlify-cache": "^1.2.0",
