--- a/gatsby-theme-homepage/package.json
+++ b/gatsby-theme-homepage/package.json
@@ -17,5 +17,8 @@
 		"gatsby": "^2.13.57",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0"
+	},
+	"dependencies": {
+		"gatsby-theme-interface": "*"
 	}
 }
