--- a/gatsby-theme-blog/package.json
+++ b/gatsby-theme-blog/package.json
@@ -26,6 +26,7 @@
 		"gatsby-source-filesystem": "^2.1.9",
 		"gatsby-theme-interface": "*",
 		"prism-theme-night-owl": "^1.2.0",
-		"prismjs": "^1.17.1"
+		"prismjs": "^1.17.1",
+		"typeface-manrope": "^1.0.0"
 	}
 }
