--- a/gatsby-theme-blog/package.json
+++ b/gatsby-theme-blog/package.json
@@ -25,6 +25,7 @@
 		"gatsby-remark-prismjs": "^3.3.5",
 		"gatsby-source-filesystem": "^2.1.9",
 		"gatsby-theme-interface": "*",
+		"gatsby-theme-seo": "*",
 		"prism-theme-night-owl": "^1.2.0",
 		"prismjs": "^1.17.1",
 		"typeface-manrope": "^1.0.0"
