--- a/gatsby-theme-homepage/package.json
+++ b/gatsby-theme-homepage/package.json
@@ -19,6 +19,7 @@
 		"react-dom": "^16.9.0"
 	},
 	"dependencies": {
-		"gatsby-theme-interface": "*"
+		"gatsby-theme-interface": "*",
+		"gatsby-theme-seo": "*"
 	}
 }
