--- a/www/package.json
+++ b/www/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"gatsby": "^2.13.57",
 		"gatsby-plugin-google-analytics": "^2.1.7",
+		"gatsby-plugin-manifest": "^2.2.5",
 		"gatsby-theme-blog": "*",
 		"gatsby-theme-homepage": "*",
 		"react": "^16.9.0",
