--- a/www/package.json
+++ b/www/package.json
@@ -12,6 +12,7 @@
 		"gatsby": "^2.13.57",
 		"gatsby-plugin-google-analytics": "^2.1.7",
 		"gatsby-plugin-manifest": "^2.2.5",
+		"gatsby-plugin-sitemap": "^2.2.6",
 		"gatsby-theme-blog": "*",
 		"gatsby-theme-homepage": "*",
 		"react": "^16.9.0",
