--- a/package.json
+++ b/package.json
@@ -6,5 +6,27 @@
 		"gatsby-theme-homepage",
 		"gatsby-theme-interface",
 		"gatsby-theme-seo"
-	]
+	],
+	"scripts": {
+		"lint:md": "textlint ./www/content/**/*.md"
+	},
+	"devDependencies": {
+		"@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
+		"textlint": "^11.3.1",
+		"textlint-rule-abbr-within-parentheses": "^1.0.2",
+		"textlint-rule-alex": "^1.3.1",
+		"textlint-rule-apostrophe": "^1.0.0",
+		"textlint-rule-common-misspellings": "^1.0.1",
+		"textlint-rule-diacritics": "^1.0.0",
+		"textlint-rule-en-capitalization": "^2.0.2",
+		"textlint-rule-ginger": "^2.2.1",
+		"textlint-rule-no-start-duplicated-conjunction": "^2.0.2",
+		"textlint-rule-period-in-list-item": "^0.3.2",
+		"textlint-rule-rousseau": "^1.4.6",
+		"textlint-rule-spelling": "^0.1.1",
+		"textlint-rule-stop-words": "^1.0.17",
+		"textlint-rule-terminology": "^1.1.30",
+		"textlint-rule-unexpanded-acronym": "^1.2.3",
+		"textlint-rule-write-good": "^1.6.2"
+	}
 }
