--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
 		"gatsby-theme-seo"
 	],
 	"scripts": {
-		"lint:md": "textlint ./www/content/**/*.md"
+		"lint:md": "textlint ./www/content/**/*.{md,mdx}"
 	},
 	"devDependencies": {
 		"@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
+		"@textlint/textlint-plugin-markdown": "^5.1.8",
 		"textlint": "^11.3.1",
 		"textlint-rule-abbr-within-parentheses": "^1.0.2",
 		"textlint-rule-alex": "^1.3.1",
