--- a/.textlintrc
+++ b/.textlintrc
@@ -13,11 +13,11 @@
     "common-misspellings": true,
     "diacritics": true,
     "en-capitalization": true,
-    "ginger": true,
+    "ginger": false,
     "no-start-duplicated-conjunction": true,
     "period-in-list-item": true,
     "rousseau": true,
-    "spelling": true,
+    "spelling": false,
     "stop-words": true,
     "terminology": true,
     "unexpanded-acronym": true,
